Enable shared log with password

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,36 +11,20 @@ body {
   color: #e5e7eb;
   padding: 20px;
 }
-h1 { margin-bottom: 10px; }
 input, button {
   width: 100%;
   padding: 10px;
   margin: 6px 0;
-  font-size: 16px;
 }
-button {
-  background: #2563eb;
-  color: white;
-  border: none;
-  border-radius: 6px;
-}
-button.reset {
-  background: #dc2626;
-}
+button { background: #2563eb; color: white; border: none; }
+button.reset { background: #dc2626; }
 .card {
   background: #020617;
   padding: 15px;
   border-radius: 10px;
   margin-bottom: 15px;
 }
-.log {
-  border-top: 1px solid #334155;
-  margin-top: 10px;
-  padding-top: 10px;
-}
-.log-entry {
-  margin-bottom: 6px;
-}
+.log-entry { margin-bottom: 6px; }
 small { color: #94a3b8; }
 </style>
 </head>
@@ -51,65 +34,49 @@ small { color: #94a3b8; }
 <h1>Hourly Case Tracker</h1>
 
 <div class="card">
-  <h3>Daily Setup</h3>
-  <input id="date" placeholder="Date (e.g. Mon Feb 9 2026)">
-  <input id="material" placeholder="Material Code (56731)">
-  <input id="startCount" type="number" placeholder="Starting Case Count">
+  <input id="date" placeholder="Date">
+  <input id="material" placeholder="Material Code">
+  <input id="startCount" type="number" placeholder="Starting Count">
   <button onclick="setDaily()">Set Day</button>
 </div>
 
 <div class="card">
-  <h3>Hourly Entry</h3>
-  <input id="time" placeholder="Time (7am, 7:30, 8)">
-  <input id="count" type="number" placeholder="Current Case Count">
+  <input id="time" placeholder="Time">
+  <input id="count" type="number" placeholder="Current Count">
   <button onclick="addEntry()">Add Entry</button>
 </div>
 
 <div class="card">
-  <h3>Log</h3>
-  <div id="summary"><small>Waiting for setup...</small></div>
-  <div id="log" class="log"></div>
+  <div id="summary"><small>No data yet</small></div>
+  <div id="log"></div>
 </div>
 
 <button class="reset" onclick="resetDay()">Reset Day</button>
 
 <script>
-let material = "";
-let date = "";
-let lastCount = null;
+const REPO = "Brandonmcgirl/Case-tracker";
+const WORKFLOW = "update-log.yml";
+const WRITE_KEY = prompt("Enter write password");
 
-const GITHUB_REPO = "Brandonmcgirl/Case-tracker";
-const WORKFLOW_FILE = "update-log.yml";
+let date="", material="", lastCount=null;
 
-// Load existing log
 async function loadLog() {
-  try {
-    const res = await fetch("log.json?" + new Date().getTime());
-    const data = await res.json();
-    displayLog(data);
-  } catch (err) {
-    console.error(err);
-  }
-}
+  const res = await fetch("log.json?" + Date.now());
+  const data = await res.json();
+  const log = document.getElementById("log");
+  log.innerHTML = "";
 
-function displayLog(entries) {
-  const logDiv = document.getElementById("log");
-  logDiv.innerHTML = "";
-  entries.forEach(entry => {
-    const diff = entry.diff || 0;
-    const div = document.createElement("div");
-    div.className = "log-entry";
-    div.innerHTML = `${entry.time} | ${entry.material} | ${entry.count} <b>(+${diff})</b>`;
-    logDiv.appendChild(div);
+  data.forEach(e => {
+    log.innerHTML += `<div class="log-entry">${e.time} | ${e.material} | ${e.count} (+${e.diff})</div>`;
   });
 
-  if (entries.length) {
-    const last = entries[entries.length-1];
-    document.getElementById("summary").innerHTML =
-      `<b>${last.date}</b><br>Material: ${last.material}<br>Last Count: ${last.count}`;
+  if (data.length) {
+    const last = data[data.length - 1];
     lastCount = last.count;
-    material = last.material;
     date = last.date;
+    material = last.material;
+    document.getElementById("summary").innerHTML =
+      `<b>${date}</b><br>${material}<br>Last: ${lastCount}`;
   }
 }
 
@@ -117,83 +84,42 @@ function setDaily() {
   date = document.getElementById("date").value || new Date().toDateString();
   material = document.getElementById("material").value;
   lastCount = parseInt(document.getElementById("startCount").value);
+}
 
-  if (!material || isNaN(lastCount)) {
-    alert("Please enter material and starting count");
-    return;
-  }
-
-  document.getElementById("summary").innerHTML =
-    `<b>${date}</b><br>Material: ${material}<br>Starting Count: ${lastCount}`;
-  document.getElementById("log").innerHTML = "";
+async function dispatch(entry, reset=false) {
+  await fetch(`https://api.github.com/repos/${REPO}/actions/workflows/${WORKFLOW}/dispatches`, {
+    method: "POST",
+    headers: { "Accept": "application/vnd.github.v3+json" },
+    body: JSON.stringify({
+      ref: "main",
+      inputs: {
+        key: WRITE_KEY,
+        new_entry: JSON.stringify(entry),
+        reset: reset ? "true" : "false"
+      }
+    })
+  });
 }
 
 async function addEntry() {
-  if (lastCount === null) {
-    alert("Set the day first");
-    return;
-  }
-
   const time = document.getElementById("time").value;
   const count = parseInt(document.getElementById("count").value);
-
   if (!time || isNaN(count)) return;
 
   const diff = count - lastCount;
   lastCount = count;
 
-  const entryObj = { date, time, material, count, diff };
-
-  // Trigger GitHub Actions workflow WITHOUT exposing PAT
-  await fetch(`https://api.github.com/repos/${GITHUB_REPO}/actions/workflows/${WORKFLOW_FILE}/dispatches`, {
-    method: "POST",
-    headers: {
-      "Accept": "application/vnd.github.v3+json"
-    },
-    body: JSON.stringify({
-      ref: "main",
-      inputs: { new_entry: JSON.stringify(entryObj), reset: "false" }
-    })
-  });
-
-  // Refresh log locally
-  loadLog();
-  document.getElementById("time").value = "";
-  document.getElementById("count").value = "";
+  await dispatch({ date, time, material, count, diff });
+  setTimeout(loadLog, 4000);
 }
 
 async function resetDay() {
-  if (!confirm("Reset for new day?")) return;
-
-  material = "";
-  date = "";
-  lastCount = null;
-
-  document.getElementById("summary").innerHTML = "<small>Waiting for setup...</small>";
-  document.getElementById("log").innerHTML = "";
-  document.getElementById("date").value = "";
-  document.getElementById("material").value = "";
-  document.getElementById("startCount").value = "";
-
-  // Trigger reset workflow
-  await fetch(`https://api.github.com/repos/${GITHUB_REPO}/actions/workflows/${WORKFLOW_FILE}/dispatches`, {
-    method: "POST",
-    headers: {
-      "Accept": "application/vnd.github.v3+json"
-    },
-    body: JSON.stringify({
-      ref: "main",
-      inputs: { new_entry: "{}", reset: "true" }
-    })
-  });
-
-  loadLog();
+  await dispatch({}, true);
+  lastCount=null;
+  setTimeout(loadLog, 4000);
 }
 
-// Auto-refresh every 20 seconds
 setInterval(loadLog, 20000);
-
-// Load log on page load
 loadLog();
 </script>
 </body>
