--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@ let date = "";
 let lastCount = null;
 
 // Use your phone's Termux IP
-const SERVER_URL = "  https://surfing-growth-acknowledged-thereof.trycloudflare.com";  // <-- REPLACE with your actual LAN IP
+const SERVER_URL =
+"https://surfing-growth-acknowledged-thereof.trycloudflare.com";  // <-- REPLACE with your actual LAN IP
 
 async function loadLog() {
   try {
