Update index.html with live SERVER_URL

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ small { color: #94a3b8; }
 
 <div class="card">
   <h3>Daily Setup</h3>
-  <input id="date" placeholder="Date (e.g. Mon Feb 9 2026)">
+  <input id="date" placeholder="Date (e.g. Mon Feb 9 2026)(7am)">
   <input id="material" placeholder="Material Code (56731)">
   <input id="startCount" type="number" placeholder="Starting Case Count">
   <button onclick="setDaily()">Set Day</button>
